<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/barbieMain">

    <ImageView
        android:id="@+id/git_logo"
        android:layout_width="380dp"
        android:layout_height="380dp"
        android:src="@drawable/ic_star"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/get_token" />

    <TextView
        android:id="@+id/text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:fontFamily="@font/alex_brush"
        android:text="@string/hello"
        android:textAlignment="center"
        android:textColor="@color/barbie"
        android:textSize="120sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/git_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="monospace"
        android:text="@string/github_com"
        android:textColor="@color/barbie"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text" />

    <EditText
        android:id="@+id/git_username"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:background="@color/barbieMain"
        android:fontFamily="@font/alex_brush"
        android:hint="@string/your_name_barbie"
        android:minHeight="48dp"
        android:textColor="@color/barbieLite"
        android:textColorHint="@color/barbieLite"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/git_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/git_name"
        app:layout_constraintTop_toTopOf="@+id/git_name" />

    <ImageView
        android:id="@+id/delete"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="5dp"
        android:background="@drawable/ic_clear"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/git_username" />

    <ProgressBar
        android:id="@+id/loginProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/barbie"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/git_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/get_token"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#F4F2F3"
        android:fontFamily="monospace"
        android:text="@string/check_your_token_barbie"
        android:textColor="@color/barbie"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/git_name" />

    <Button
        android:id="@+id/save"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="30dp"
        android:backgroundTint="#F4F2F3"
        android:fontFamily="monospace"
        android:text="@string/save_name"
        android:textColor="@color/barbie"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/git_name" />

</androidx.constraintlayout.widget.ConstraintLayout>