<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/barbieLite">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="3dp"
        android:fontFamily="@font/alex_brush"
        android:text="@string/welcome_barbie"
        android:textColor="@color/white"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/search"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/search"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="9.2dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/ic_search"
        app:layout_constraintEnd_toStartOf="@id/exit"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/exit"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="9.2dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/ic_exit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/alex_brush"
        android:text="@string/your_profile"
        android:textColor="@color/barbie"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_user"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_message" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:fontFamily="monospace"
        android:text="Name"
        android:textColor="@color/white"
        android:textSize="23sp"
        android:textStyle="italic"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="@+id/image" />

    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_margin="5dp"
        android:src="@drawable/ic_location"
        app:layout_constraintBottom_toBottomOf="@+id/user_location"
        app:layout_constraintEnd_toStartOf="@id/user_location"
        app:layout_constraintTop_toTopOf="@+id/user_location" />

    <TextView
        android:id="@+id/user_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="2dp"
        android:fontFamily="monospace"
        android:text="location"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/image"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toBottomOf="@id/user_name" />

    <TextView
        android:id="@+id/repos_message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/alex_brush"
        android:text="@string/repositories"
        android:textColor="@color/barbie"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/repositories_rec_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/repos_message"
        tools:listitem="@layout/for_repositories_rec_view" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/barbie"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>